Typographic and other small fixes
Signed-off-by: Thomas Schneider <thosch97@gmail.com>

--- a/body.tex
+++ b/body.tex
@@ -1,7 +1,7 @@
 \begin{document}
 
 \begin{frame}
-	 \titlepage
+	\titlepage
 \end{frame}
 
 \begin{frame}{Gliederung}
@@ -21,7 +21,7 @@
 		\end{column}
 		\begin{column}{0.39\textwidth}
 			\begin{itemize}
-				\item 20. April 1889 - 30. April 1945
+				\item 20.\ April 1889 - 30.\ April 1945
 				\item Reichskanzler seit 1933
 			\end{itemize}
 		\end{column}
@@ -55,7 +55,7 @@
 			\begin{itemize}
 				\item Shouwa = Erleuchteter Frieden, Regierungsdevise
 				\pause
-				\item 29. April 1901 - 7. Januar 1989
+				\item 29.\ April 1901 - 7.\ Januar 1989
 				\item Ten’nou ab 1926
 			\end{itemize}
 		\end{column}
@@ -84,7 +84,7 @@
 			\includegraphicscopyright[height = 6cm]
 			{Map-Germany-1947.pdf}
 			{Wikimedia Commons user 52 Pickup; CC-BY-SA 2.5; Based on map data
-			of the IEG-Maps project (Andreas Kunz, B. Johnen and Joachim Robert
+			of the IEG-Maps project (Andreas Kunz, B.\ Johnen and Joachim Robert
 			Moeschl: University of Mainz) -- www.ieg-maps.uni-mainz.de}
 		\end{column}
 		\begin{column}{0.39\textwidth}
@@ -195,7 +195,7 @@
 
 \begin{frame}{Hiroshima}
 	\begin{itemize}
-		\item inkl. Spätfolgen ca. 90.000 bis 166.000 Opfer
+		\item inkl.\ Spätfolgen ca.\ 90.000 bis 166.000 Opfer
 		\pause
 		\item 70.000 bis 76.000 zerstörte/beschädigte Häuser
 		\pause
@@ -207,7 +207,7 @@
 	\begin{itemize}
 		\item ursprünglich nicht in Betracht gezogen
 		\item gedacht war Kyouto, aber als kulturelles Zentrum durch
-			Kriegsminister 	ausgeschlossen
+			Kriegsminister ausgeschlossen
 	\end{itemize}
 \end{frame}
 
@@ -221,12 +221,11 @@
 			\pause
 			\item Tod durch Strahlenkrankheit bis Ende 1945
 			\pause
-			\item eigentliche Hibakusha: Spätfolgen (z.\,B. Krebs)
+			\item eigentliche Hibakusha: Spätfolgen (z.\,B.\ Krebs)
 			\pause
 		\end{itemize}
 		\item auch heute Opfer von Diskrimination
 	\end{itemize}
 \end{frame}
-
 
 \end{document}
