Make image caption more readable
Signed-off-by: Thomas Schneider <thosch97@gmail.com>

--- a/style.tex
+++ b/style.tex
@@ -28,5 +28,5 @@
 \newcommand\includegraphicscopyright[3][]{%
 	\leavevmode\vbox{\vskip3pt\raggedright\setbox\mytempbox=\hbox{\includegraphics[#1]{#2}}%
 		\mytempdimen=\wd\mytempbox\box\mytempbox\par\vskip1pt%
-		\fontsize{3}{3.5}\selectfont{\color{black!25}{\vbox{\hsize=\mytempdimen#3}}}\vskip3pt%
+		\fontsize{5}{3.5}\selectfont{\color{black}{\vbox{\hsize=\mytempdimen#3}}}\vskip3pt%
 	}}
