Add list of references
Signed-off-by: Thomas Schneider <thosch97@gmail.com>

--- a/body.tex
+++ b/body.tex
@@ -228,4 +228,66 @@
 	\end{itemize}
 \end{frame}
 
+
+\appendix
+\section{\appendixname}
+\subsection{Quellen}
+\begin{frame}{Buchquellen}
+	\begin{itemize}
+		\item Geschichte 13 -- Die Welt auf dem Weg ins 21.\ Jahrhundert.
+			Anton~Egner et al., Schroedel Verlag, Hannover 2003
+		\item Im Schatten des Siegers: JAPAN. Herausgegeben von Ulrich~Menzel,
+			Suhrkamp Verlag, Frankfurt 1989, 4 Bände:
+			\begin{enumerate}
+				\item Kultur und Gesellschaft
+				\item Staat und Gesellschaft
+				\item Ökonomie und Politik
+				\item Weltwirtschaft und Weltpolitik
+			\end{enumerate}
+	\end{itemize}
+\end{frame}
+
+\begin{frame}{Webquellen}
+	\begin{itemize}\mode<presentation>{\tiny}
+		\item \url
+			{https://de.wikipedia.org/w/index.php?title=Hibakusha&stableid=131284599}
+			\footnote{Alle Links zu Wikipedia verweisen auf die von mir
+			verwendete Version.}
+		\item \url
+			{https://de.wikipedia.org/w/index.php?title=Atombombenabw\%C3\%BCrfe_auf_Hiroshima_und_Nagasaki&stableid=136221536}
+		\item \url
+			{https://de.wikipedia.org/w/index.php?title=Besatzungszeit_in_Japan&stableid=130345483}
+		\item \url
+			{https://de.wikipedia.org/w/index.php?title=Sh\%C5\%8Dwa-Zeit&stableid=123300099}
+		\item \url
+			{http://www.wissen.de/bildwb/die-welt-nach-1945-politik-im-zeichen-des-ost-west-konflikts},
+			4.\ Dezember 2014
+		\item \url{http://www.welt.de/119031194}, 4.\ Dezember 2014
+		\item \url{http://www.eu-ro-ni.ch/publications/Politik_Japan_nach.pdf},
+			4.\ Dezember 2014
+		\normalsize
+	\end{itemize}
+\end{frame}
+
+\begin{frame}{Bildquellen}
+	\begin{itemize}\mode<presentation>{\tiny}
+		\item \url
+			{https://commons.wikimedia.org/wiki/File:Atomic_bomb_1945_mission_map.svg}
+			\footnote{Bei allen Dateien von Wikimedia Commons wurde die Version
+				verwendet, die am 4.\ Dezember 2014 aktuell war}
+		\item \url
+			{https://commons.wikimedia.org/wiki/File:Bundesarchiv_Bild_183-S33882,_Adolf_Hitler_retouched.jpg}
+		\item \url
+			{https://commons.wikimedia.org/wiki/File:Deutschland_Bundeslaender_1957.png}
+		\item \url
+			{https://commons.wikimedia.org/wiki/File:Macarthur_hirohito.jpg}
+		\item \url
+			{https://commons.wikimedia.org/wiki/File:Map-Germany-1947.svg}
+		\item \url
+			{https://commons.wikimedia.org/wiki/File:Sea_of_Okhotsk_map.png}
+		\normalsize
+	\end{itemize}
+\end{frame}
+
+
 \end{document}
